--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  font-family: "Indie Flower", cursive;
 }
 
 .App-logo {
@@ -13,26 +22,67 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  position: fixed;
+  z-index: 44444444444444;
+  border: 1px solid #ffffff1c;
+  background-color: #3333334f;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 10px;
+  width: 400px;
+  font-family: 'Maven Pro', sans-serif;
+  box-shadow: 0px 0px 40px 10px #000000a1;
 }
 
-.App-link {
-  color: #61dafb;
+form > input {
+  background-color: #111111 !important;
+  color: rgba(255, 255, 255, 0.836);
+  border: 1px solid #282c34;
+  border-radius: 5px;
+  height: 50px;
+  font-size: 18px;
+  width: 320px;
+  font-family: 'Maven Pro', sans-serif;
+  padding: 14px;
+  transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus {
+  border: #8f43ee 1px solid;
+  box-shadow: #a85fff55 0px 0px 10px 0px;
+}
+
+input {
+  outline: none;
+}
+
+form button {
+  background-color: #8f43ee;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 5px;
+  width: 50px;
+  cursor: pointer;
+
+  height: 50px;
+  font-size: 24px;
+}
+
+form button:active {
+  transform: scale(1.1);
+  transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+form button:focus {
+  outline: none;
+}
+
+form button:hover {
+  box-shadow: #a85fff 0px 0px 10px 0px;
+  transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
