--- a/src/components/style.css
+++ b/src/components/style.css
@@ -34,7 +34,8 @@ h4 button {
   transform-origin: center;
   font-size: 10px;
   cursor: pointer;
-  transition: all 0.1s ease-in-out;
+
+  transition: all 0.15s ease-in-out;
   top: -25px;
   right: -25px;
 }
@@ -57,16 +58,30 @@ h4 button:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(255, 87, 87, 0.144);
+  background-color: rgba(255, 70, 70, 0.75);
   color: rgb(255, 255, 255);
   backdrop-filter: blur(5px);
   height: 20px;
   padding: 20px;
-  width: 300px;
+  width: 250px;
   z-index: 111111111111111111111111111;
-  top: 20px;
+  bottom: 30px;
+  right: 40px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px #000000;
-  transition: top 1s ease-in-out;
+
+  transition: transform 1s ease-in-out;
   font-family: "Maven Pro", sans-serif;
+
+  animation: slideLeft 100ms ease;
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateY(100px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
