--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-
+  height: auto;
   background: linear-gradient(
       -90deg,
       rgba(255, 255, 255, 0.04) 1px,
