--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   height: auto;
+  /* cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur197.png), auto !important; */
   background: linear-gradient(
       -90deg,
       rgba(255, 255, 255, 0.04) 1px,
